<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".AuthActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/helloLabelTextView"
        android:text="@string/login_screen_hello_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        tools:text="@string/login_screen_hello_label"
        style="@style/big_white_text_style" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recomendationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloLabelTextView"
        android:text="@string/login_screen_tips_enter_email_text"
        android:textColor="@color/white"
        android:textAlignment="center"
        tools:text="@string/login_screen_tips_enter_email_text"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        style="@style/horizontal_guideline_style"
        app:layout_constraintGuide_percent="0.25" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        app:boxStrokeColor="@drawable/line_text_input_layout_selector"
        app:expandedHintEnabled="false"
        app:boxBackgroundColor="@color/main_color"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintStart_toEndOf="@id/guidelineV"
        app:layout_constraintTop_toBottomOf="@+id/recomendationTextView"
        style="@style/input_layout_style">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail_field_hint"
            android:textColor="@color/gray_input_field_color"
            tools:text="ddddddddd@gg.gg"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:textColorHint="@color/gray_input_field_color"
        style="@style/input_layout_style"
        android:layout_marginTop="109dp"
        app:boxStrokeColor="@drawable/line_text_input_layout_selector"
        app:expandedHintEnabled="false"
        app:boxBackgroundColor="@color/main_color"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintStart_toEndOf="@id/guidelineV"
        app:layout_constraintTop_toBottomOf="@+id/recomendationTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            android:textColor="@color/gray_input_field_color"

            tools:text="1q2w3e4r"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV"
        style="@style/vertical_guideline_style"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        style="@style/vertical_guideline_style"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_checkbox_text"
        android:textSize="16sp"
        android:translationX="-3dp"
        android:layout_marginTop="200dp"
        android:paddingStart="6dp"
        android:checked="false"
        android:button="@drawable/chb_selector"
        android:textColor="@color/gray_input_field_color"
        app:layout_constraintStart_toEndOf="@id/guidelineV"
        app:layout_constraintTop_toBottomOf="@id/recomendationTextView"/>

    <androidx.appcompat.widget.AppCompatTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintBottom_toBottomOf="@id/checkBox"
        app:layout_constraintTop_toTopOf="@id/checkBox"
        android:textColor="@color/white"
        android:text="@string/login_screen_forgot_password_text"
        tools:text="@string/login_screen_forgot_password_text"
        android:textSize="16sp"/>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/loginButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/login_refister_button_rounder"
    android:textColor="@color/white"
    android:layout_marginBottom="20dp"
    android:text="@string/login_screen_login_button_text"
    android:textSize="20sp"
    app:layout_constraintStart_toEndOf="@id/guidelineV"
    app:layout_constraintEnd_toStartOf="@id/guidelineV2"
    app:layout_constraintBottom_toTopOf="@id/signUpTextView"/>

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tips"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/gray_input_field_color"
    android:text="@string/login_screen_don_t_have_account_text"
    tools:text="Don`t have account?"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="@id/signUpTextView"

    app:layout_constraintStart_toStartOf="@id/guideline02"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:text="@string/login_screen_sign_up_text"
        tools:text="@string/login_screen_sign_up_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        style="@style/vertical_guideline_style"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline02"
        style="@style/vertical_guideline_style"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>